# personal-stt

./: AGENT.md  README.md  main.py  pyproject.toml
docs/: architecture.md  cli_guide.md  codebase.md  system_defense.md
scripts/: cleanup.py  setup.py
src/personalstt/: cli.py  config.py  daemon.py  paster.py  recorder.py  sound.py  transcriber.py
